# herenciapp

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: docker-compose.yml
.github/workflow/: deploy.yml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 6b03c0a59c80_adding_a_timezone_to_orders_columns.py  8b08a95f01b9_baseline_auth_tables.py  8bff43b0ef87_fix_order_timestamps_mexico_time.py  99939d7d6a20_adding_meat_catalogue.py  9f292299a76f_add_role_column_to_users_table.py  af2b5810e086_create_restaurant_and_orders_tables.py  b1a250382aa5_using_mexico_city_cst_time_by_default.py  cce1eeede1a3_added_selection_str_field_to_orderdetail.py  da31a2e76bc1_adding_meat_catalogue.py  f2dfddf99bcb_add_unique_constraint_to_flavor_.py  fb4c4d042aa5_main_dish_unique.py
src/: __init__.py  config.py  database.py  main.py  router.py  utils.py
src/templates/: base.html  base_nav.html  index.html  login.html  main.html  orders.html  products.html  products_update.html  register.html  verification.html
tests/: conftest.py  test_health.py  test_main.py
tests/integration/: test_endpoint_main_and_orders.py  test_flavor_endpoints.py  test_flavor_post_get_endpoints.py  test_meat_patch_delete_endpoints.py  test_meat_post_get_endpoints.py  test_patch_delete_flavors_endpoints.py  test_products.py  test_products_template.py  test_update_and_delete_products_endpoints.py  test_user_verification.py  test_using_verification.py
tests/unit/: test_auth_services.py  test_creation_and_validation_token.py  (+1 more)
(+51 files in other folders)
