[project]
name = "herenciapp"
version = "0.1.0"
description = "Web app for restaurant control, created originally for \"Carnitas herencia del abuelo\" restaurant"
authors = [
    {name = "Edmundo Garcia",email = "70769598+ingega@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn[standard] (>=0.46.0,<0.47.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)"
]

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "uvicorn (>=0.46.0,<0.47.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
